# dataProvider

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Benchmarks.hpp  Column.h  Column.hpp  DataCatalog.h  DataCatalog.hpp  Operators.hpp  OracleBenchmarks.hpp  Queries.h  WorkItem.pb.h  Worker.hpp
src/: Benchmarks.cpp  DataCatalog.cpp  OracleBenchmarks.cpp  Queries.cpp  QueriesMT.cpp  main.cpp
